# Eunet

./: CMakeLists.txt  README.md
docs/: CHANGELOG.md  commitlog.txt  design_all.md  holder.md  progress.md
docs/design/: core_design.md  net_design.md  platform_design.md  tui_design.md  util_design.md
include/eunet/core/: engine.hpp  event.hpp  event_snap_shoot.hpp  event_snapshot.hpp  i_event_sink.hpp  lifecycle_fsm.hpp  orchestrator.hpp  scenario.hpp  sink.hpp  timeline.hpp
include/eunet/core/sink/: console_sink.hpp  metrics_sink.hpp  sink.hpp
include/eunet/net/: async_tcp_client.hpp  connection.hpp  http_client.hpp  http_scenario.hpp  io_buffer.hpp  sync_tcp_client.hpp  tcp_client.hpp  tcp_connection.hpp
include/eunet/net/connection/: tcp_connection.hpp  udp_connection.hpp
include/eunet/net/http/: http_request.hpp  http_response.hpp
include/eunet/platform/: address.hpp  base_socket.hpp  capability.hpp  fd.h  fd.hpp  io_context.hpp  poller.hpp  socket_base.hpp  sys_error.hpp  tcp_socket.hpp  time.h  time.hpp
include/eunet/platform/net/: common.hpp  dns_resolver.hpp  endpoint.hpp
include/eunet/platform/socket/: tcp_socket.hpp  udp_socket.hpp
include/eunet/tui/: tui_app.hpp  tui_sink.hpp
include/eunet/util/: byte_buffer.hpp  error.hpp  result.hpp
scripts/: build.sh  deps.list  fetch_third_party.sh  install_system_deps.sh
src/: CMakeLists.txt  main.cpp
src/core/: event.cpp  lifetime_fsm.cpp  orchestrator.cpp  timeline.cpp
src/net/: async_tcp_client.cpp  http_client.cpp  http_scenario.cpp  io_buffer.cpp  sync_tcp_client.cpp  tcp_client.cpp  tcp_connection.cpp
src/net/connection/: tcp_connection.cpp  udp_connection.cpp
src/platform/: address.cpp  base_socket.cpp  capability.cpp  fd.cpp  io_context.cpp  poller.cpp  socket_base.cpp  sys_error.cpp  tcp_socket.cpp  time.cpp
src/platform/net/: dns_resolver.cpp  endpoint.cpp
src/platform/socket/: tcp_socket.cpp  udp_socket.cpp
src/tui/: tui_app.cpp
src/util/: byte_buffer.cpp  error.cpp
tests/: CMakeLists.txt  benchmark_test.cpp  test_fd.cpp  test_poller.cpp  test_time.cpp
tests/core/: test_event.cpp  test_lifecycle_fsm.cpp  test_orchestrator.cpp  test_timeline.cpp
tests/core/sink/: test_console_sink.cpp  test_metrics_sink.cpp
tests/net/: test_async_tcp_client.cpp  test_io_buffer.cpp  test_sync_tcp_client.cpp  test_tcp_client.cpp  test_tcp_connection.cpp
tests/net/connection/: test_tcp_connection.cpp  test_udp_connection.cpp
tests/platform/: test_address.cpp  test_capability.cpp  test_fd.cpp  test_poller.cpp  test_tcp_socket.cpp  test_time.cpp
tests/platform/net/: test_dns_resolver.cpp
tests/platform/socket/: test_tcp_socket.cpp  test_udp_socket.cpp
tests/util/: test_byte_buffer.cpp  test_result.cpp
